--- a/styles/architects.css
+++ b/styles/architects.css
@@ -14,6 +14,10 @@
     display: flex;
 }
 
+.text-primary{
+    color: #FF900E;
+}
+
 /* dark 02 */
 .text-grey{
     color: #424242;
@@ -38,6 +42,19 @@
     border: none;
 }
 
+main{
+    max-width: 1340px;
+    margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
+
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
 /* header styles */
 
 /* navbar related styles */
@@ -62,7 +79,7 @@
 }
 
 .navbar, .banner{
-    max-width: 1440px;
+    max-width: 1340px;
     margin: 0 auto;
 }
 
@@ -84,9 +101,52 @@
     width: 100%;
 }
 
+/* team and feature related styles */
+.teams{
+    align-items: center;
+}
+
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px ;
+}
+
+.our-features{
+    margin-left: 90px;
+    margin-right: 100px;
+    max-width: 530px;
+}
+
+
+#quick-list{
+    font-weight: 500;
+}
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .navbar, .nav-links{
+    .navbar, 
+    .nav-links, 
+    .teams{
         flex-direction: column;
+    }
+
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .our-features{
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+}
+
+/* medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin: 50px auto;
     }
 }
